--- a/src/DevIo.App/Views/Produtos/Create.cshtml
+++ b/src/DevIo.App/Views/Produtos/Create.cshtml
@@ -8,7 +8,7 @@
 
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-10">
         <form enctype="multipart/form-data" asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -30,12 +30,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="ImagemUpload" class="control-label"></label>
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" id="ImagemUpload" asp-for="ImagemUpload" />
-                        <label data-browse="Procurar" style="width: 400px" class="custom-file-label" for="ImagemUpload"></label>
-                        <label style="display: none" id="img_nome"></label>
-                    </div>
-
+                <div class="custom-file">
+                    <input type="file" class="custom-file-input" id="ImagemUpload" asp-for="ImagemUpload" />
+                    <label data-browse="Procurar" style="width: 400px" class="custom-file-label" for="ImagemUpload"></label>
+                    <label style="display: none" id="img_nome"></label>
+                </div>
+                <img id="img" style="height : 200px; width : 300px; display : none;"/>
                 <span asp-validation-for="ImagemUpload" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -61,6 +61,18 @@
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     
 <script>
+    $(function () {
+        $("#ImagemUpload").change(function () {
+            const file = $(this)[0].files[0]
+            const fileReader = new FileReader()
+            fileReader.onloadend = function () {
+                $('#img').attr('src', fileReader.result)
+                $('#img')[0].style.display = 'block'
+            }
+            fileReader.readAsDataURL(file)
+        })
+    })
+
     $("#ImagemUpload").change(function () {
         $("#img_nome").text(this.files[0].name);
         $("#img_nome")[0].style.display = 'block';
