--- a/src/DevIo.App/Views/Produtos/Index.cshtml
+++ b/src/DevIo.App/Views/Produtos/Index.cshtml
@@ -43,7 +43,7 @@
                 @Html.DisplayFor(modelItem => item.Fornecedor.Documento)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Valor)
+                @item.Valor.ToString("C")
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Ativo)
