--- a/src/DevIo.App/Views/Fornecedores/Index.cshtml
+++ b/src/DevIo.App/Views/Fornecedores/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<DevIo.App.ViewModels.FornecedorViewModel>
+﻿@using DevIo.App.Extensions
+@model IEnumerable<DevIo.App.ViewModels.FornecedorViewModel>
 
 @{
     ViewData["Title"] = "Lista de Fornecedores";
@@ -34,7 +35,7 @@
                 @Html.DisplayFor(modelItem => item.Nome)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Documento)
+                @this.FormataDocumento(item.TipoFornecedor, item.Documento)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.TipoFornecedor)
