--- a/src/DevIo.App/Views/Fornecedores/Delete.cshtml
+++ b/src/DevIo.App/Views/Fornecedores/Delete.cshtml
@@ -1,14 +1,14 @@
-﻿@model DevIo.App.ViewModels.FornecedorViewModel
+﻿@using DevIo.App.Extensions
+@model DevIo.App.ViewModels.FornecedorViewModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Excluir Fornecedor";
 }
 
-<h1>Delete</h1>
+<h1>@ViewData["Title"]</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>FornecedorViewModel</h4>
+    <h4>Essa ação será permanente!</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -24,12 +24,6 @@
             @Html.DisplayFor(model => model.Documento)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TipoFornecedor)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TipoFornecedor)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Ativo)
         </dt>
         <dd class = "col-sm-10">
@@ -39,7 +33,9 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Excluir" class="btn btn-danger" /> 
+        <a  class="btn btn-info" asp-action="Index">Voltar</a>
     </form>
 </div>
+
+<partial name="_DetalhesEndereco" />
