--- a/src/DevIo.App/Views/Fornecedores/_DetalhesEndereco.cshtml
+++ b/src/DevIo.App/Views/Fornecedores/_DetalhesEndereco.cshtml
@@ -58,7 +58,8 @@
                     @Html.DisplayFor(model => model.Endereco.Estado)
                 </td>
                 <td>
-                    <a class="btn btn-info">
+                    <a asp-action="AtualizarEndereco" asp-route-id="@Model.Id" 
+                       data-modal="" class="btn btn-info">
                         <span title="Editar" class="fa fa-pencil-alt"></span>
                     </a>
                 </td>
@@ -67,3 +68,7 @@
     }
 
 </div>
+
+<script>
+     AjaxModal();
+</script>
