Add Views/Fluent Validation e ajustes gerais

--- a/src/DevIo.App/Views/Fornecedores/Details.cshtml
+++ b/src/DevIo.App/Views/Fornecedores/Details.cshtml
@@ -36,4 +36,28 @@
     <a class="btn btn-info" asp-action="Index">Voltar</a>
 </div>
 
-<partial name="_DetalhesEndereco" />
+<div id="EnderecoTarget">
+    <partial name="_DetalhesEndereco" />
+</div>
+
+<div id="myModal" class="modal fade in">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div id="myModalContent">
+
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        $(document).ready(function () {
+            AjaxModal();
+        });
+    </script>
+}
+
+
