--- a/src/DevIo.App/Views/Fornecedores/_DetalhesEndereco.cshtml
+++ b/src/DevIo.App/Views/Fornecedores/_DetalhesEndereco.cshtml
@@ -5,6 +5,7 @@
         <hr />
         <h4>Endereço</h4>
     </div>
+
     @if (Model != null)
     {
         <table class="table table-hover">
@@ -58,8 +59,7 @@
                     @Html.DisplayFor(model => model.Endereco.Estado)
                 </td>
                 <td>
-                    <a asp-action="AtualizarEndereco" asp-route-id="@Model.Id" 
-                       data-modal="" class="btn btn-info">
+                    <a supress-by-action="Edit,ObterEndereco" asp-action="AtualizarEndereco" asp-route-id="@Model.Id" class="btn btn-info" data-modal="">
                         <span title="Editar" class="fa fa-pencil-alt"></span>
                     </a>
                 </td>
@@ -70,5 +70,5 @@
 </div>
 
 <script>
-     AjaxModal();
+    AjaxModal();
 </script>
