--- a/src/DevIo.App/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/src/DevIo.App/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -7,7 +7,7 @@
     }
 
     $.validator.methods.number = function (value, element) {
-        return this.optional(element) || /-?(?:\d+|\d{1,3}(?:[\s\.,]\d{3}+)(?:[\.,]\d+)?$/.teste(value)
+        return this.optional(element) || /-?(?:\d+|\d{1,3}(?:[\s\.,]\d{3})+)(?:[\.,]\d+)?$/.test(value);
     }
 
     validator.methods.date = function (value, element) {
